feat: add a start buton for getting number of squares

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ header {
     height: 100vh;
     width: fit-content;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    justify-content: center;
+    gap: 10px;
 
 }
 .main .grid-container{
@@ -41,4 +45,8 @@ header {
 
 .hover {
     background-color: #222;
+}
+button {
+    display: inline-block;
+    padding: 10px;
 }
